add security definitions to swagger.json
